--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     .btn.ghost{background:transparent}
     .row{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
     .empty{padding:28px;text-align:center;color:#9ca3af}
-    .hl { background: rgba(255, 230, 0, 0.2); color: #000; padding: 0 .1em; border-radius: 4px; }
+    .hl { background: rgba(255, 230, 0, 0.2); padding: 0 .1em; border-radius: 4px; }
     .footer{margin:26px 0 10px;text-align:center;color:#94a3b8;font-size:13px}
     .sr-only{position:absolute;width:1px;height:1px;margin:-1px;padding:0;overflow:hidden;clip:rect(0,0,0,0);border:0}
 
