--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 </head>
 <body>
   <div class="wrap">
-    <h1><span class="dot"></span> Respuestas Rápidas <span id="count" class="pill"></span></h1>
-    <span class="pill">Última actualización 19 Septiembre 9:59</span>
+    <h1> Respuestas Rápidas <span id="count" class="pill"></span></h1>
+    <span class="pill">Última actualización 19 Septiembre 15:09</span>
 
     <p class="muted">Escribe una palabra (p. ej. <em>garantía</em>, <em>Perú</em>, <em>orden</em>, <em>no contactabilidad</em>).</p>
 
