--- a/index.html
+++ b/index.html
@@ -34,16 +34,12 @@
     .empty{padding:28px;text-align:center;color:#9ca3af}
     .hl { background: rgba(255, 230, 0, 0.4); padding: 0 .1em; border-radius: 4px; }
    
-    .footer.pill {
-  display: inline-block;
-  margin: 30px auto 20px;
-  padding: 8px 18px;
-  background: linear-gradient(135deg, var(--accent), var(--accent2));
-  border-radius: 999px;
+   .footer.simple {
+  margin: 30px 0 20px;
+  text-align: center;
   font-size: 14px;
-  font-weight: 600;
-  color: #fff;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.4);
+  color: #94a3b8; /* gris suave */
+  letter-spacing: 0.5px;
 }
     
     .sr-only{position:absolute;width:1px;height:1px;margin:-1px;padding:0;overflow:hidden;clip:rect(0,0,0,0);border:0}
@@ -732,7 +728,7 @@
 
     
   </script>
-  <div class="footer pill">
+ <div class="footer simple">
   Realizado por Edisson Fernando Fierro C.
 </div>
 </body>
