--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
     
   </script>
  <div class="footer simple">
-  Realizado por Edisson Fernando Fierro C.
+  Realizado por Edisson Fernando Fierro C. y la majooo
 </div>
 </body>
 </html>
