--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
     
   </script>
  <div class="footer simple">
-  Realizado por Edisson Fernando Fierro C. y la majooo
+ &copy; 2025 — Edisson Fernando Fierro C
 </div>
 </body>
 </html>
