--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
       /* ======= CARRUSEL AL FINAL ======= */
       {
-        name: 'Boletín septiembre (galería)',
+        name: 'Boletín septiembre ',
         wide: true,                 // <- hace la tarjeta de ancho completo
         body: `
 <x-carousel-card aspect="16/9" autoplay interval="4000">
