--- a/index.html
+++ b/index.html
@@ -490,6 +490,179 @@
           'Mata de Cacao — Babahoyo'
       },
 
+
+//centros de servicio
+
+
+      {
+  name: 'Centro de Servicio – Cuenca',
+  body: `
+<strong>Cuenca</strong><br>
+Av. de las Américas y Av. Don Bosco
+`
+},
+{
+  name: 'Centro de Servicio – Guayaquil',
+  body: `
+<strong>Guayaquil</strong><br>
+Av. Benjamín Rosales, Urbanización Santa Leonor, Mz 5 Solar 9 (Sector Aeropuerto)<br>
+<a href="https://maps.app.goo.gl/twaR4C3pLrKxe7i28" target="_blank">📍 Ver en Google Maps</a>
+`
+},
+{
+  name: 'Centro de Servicio – Quito (La Carolina)',
+  body: `
+<strong>Quito – Sector La Carolina</strong><br>
+Av. Japón y Amazonas, Edificio MP3 (tras del CCI)<br>
+<a href="https://maps.google.com/maps?q=-0.1786738%2C-78.4846088&z=17&hl=es" target="_blank">📍 Ver en Google Maps</a>
+`
+},
+{
+  name: 'Centro de Servicio – Machala',
+  body: `
+<strong>Machala</strong><br>
+Calle Marcel Laniado y Calle Guayaquil
+`
+},
+{
+  name: 'Centro de Servicio – Loja',
+  body: `
+<strong>Loja</strong><br>
+Av. Pío Jaramillo 14-113 y España
+`
+},
+{
+  name: 'Centro de Servicio – Ambato',
+  body: `
+<strong>Ambato</strong><br>
+Huachi Chico, Av. Julio Jaramillo N20 y Av. de los Chasquis<br>
+<span class="muted">Horario repuestos: 8:30 am – 5:00 pm (todos los días)</span>
+`
+},
+{
+  name: 'Centro de Servicio – Santo Domingo',
+  body: `
+<strong>Santo Domingo</strong><br>
+Av. 6 de Noviembre y Agusto Agachet<br>
+Referencia: A 1 cuadra de las canchas de volley del Colegio Federico González Suárez<br>
+<a href="https://maps.app.goo.gl/XPRztW7FsPVi17948" target="_blank">📍 Ver en Google Maps</a>
+`
+},
+{
+  name: 'Centro de Servicio – Manta',
+  body: `
+<strong>Manta</strong><br>
+Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
+`
+},
+{
+  name: 'Centro de Servicio – Quevedo',
+  body: `
+<strong>Quevedo</strong><br>
+Km 1 1/2 vía a Valencia, frente a Jardín Tía Jessy<br>
+<span class="muted">Horario: 8:00 am – 1:00 pm / 2:30 pm – 5:00 pm (Lunes a Viernes)</span>
+`
+},
+
+      
+// centros adminsitrativo
+
+      {
+  name: 'Centro de Servicio – Cuenca – Administrativo',
+  body: `
+<strong>Líder Centro Servicio:</strong> Piedad Marín<br>
+<span class="muted">pmarin@servihogar.com.ec</span>
+`
+},
+{
+  name: 'Guayaquil Administrativo',
+  body: `
+<strong>Líder Centro Servicio:</strong> Jennifer Elaje<br>
+<span class="muted">jelaje@indurama.com</span><br><br>
+
+<strong>Cobros y facturación:</strong><br>
+Andrea Cárdenas Fernández — <span class="muted">acardenas@servihogar.com.ec</span><br>
+Ma. Mercedes Guacho — <span class="muted">mguacho@indurama.com</span><br><br>
+
+<strong>Bodega de Repuestos:</strong><br>
+Armando Cobeña Tigua — <span class="muted">wcobena@servihogar.com.ec</span><br>
+Freddy Molina Figueroa — <span class="muted">fmolina@indurama.com</span><br><br>
+
+<strong>Atención al Cliente:</strong> Génesis Viteri Poveda — <span class="muted">gviteri@indurama.com</span><br>
+<strong>Planificación (Urbano):</strong> Jennifer Zambrano Quimis — <span class="muted">jjzambranoq@indurama.com</span><br>
+<strong>Planificación (Foráneo):</strong> Ivanna Vargas — <span class="muted">ivargas@indurama.com</span><br><br>
+
+<strong>Cambios y Notas de Crédito:</strong><br>
+Erick Arteaga Martillo — <span class="muted">erarteaga@indurama.com</span><br>
+Tatiana Gómez Lara — <span class="muted">tgomez@indurama.com</span>
+`
+},
+{
+  name: 'Quito Administrativo',
+  body: `
+<strong>Líder Centro Servicio:</strong> Estefanía Cocera — <span class="muted">ecocera@indurama.com</span><br><br>
+
+<strong>Otros administrativos:</strong><br>
+Cristian Olmedo — Facturación/Ventas/Proveedores<br>
+Ricardo López — Repuestos/Marcas — <span class="muted">rxlopez@indurama.com</span><br>
+Katy Mendoza — Planificación — <span class="muted">kmendoza@indurama.com</span><br>
+Cynthia Lomas — Cambios/Ingreso Taller — <span class="muted">clomas@indurama.com</span>
+`
+},
+{
+  name: 'Machala Administrativo',
+  body: `
+<strong>Líder Centro Servicio:</strong> Jimmy Ullaguari — <span class="muted">jullaguari@servihogar.com.ec</span><br><br>
+
+<strong>Notas de crédito:</strong> María Mercedes Sánchez — <span class="muted">mmsanchez@indurama.com</span><br>
+<strong>Repuestos:</strong> José Bermúdez — <span class="muted">jbermudez@servihogar.com.ec</span>
+`
+},
+{
+  name: 'Loja Administrativo',
+  body: `
+<strong>Líder Centro Servicio:</strong> Tatiana Granda<br>
+<span class="muted">tgranda@servihogar.com.ec</span>
+`
+},
+{
+  name: 'Ambato Administrativo',
+  body: `
+<strong>Líder Centro Servicio:</strong> Marcela Acosta — <span class="muted">ambato@servihogar.com.ec</span><br>
+<strong>Asistente Administrativo:</strong> Ivonne Valencia — <span class="muted">ivalencia@servihogar.com.ec</span>
+`
+},
+{
+  name: 'Santo Domingo Administrativo',
+  body: `
+<strong>Líder Centro Servicio:</strong> Freddy Gómez — <span class="muted">fagomezp@indurama.com</span><br>
+<strong>Cambios y Notas de Crédito:</strong> Maricela Ortega — <span class="muted">vortega@servihogar.com.ec</span>
+`
+},
+{
+  name: 'Manta Administrativo',
+  body: `
+<strong>Líder Centro Servicio:</strong> Romina Barcia — <span class="muted">rbarcia@indurama.com</span><br><br>
+
+<strong>Asistentes:</strong><br>
+Julissa Michelle Muñoz — Facturación — <span class="muted">jmmunozm@indurama.com</span><br>
+Oscar Andrés Pinoargote — Bodega Repuestos/Producto — <span class="muted">opinoargote@indurama.com</span><br>
+Evelyn Aguayo — Auxiliar de oficina — <span class="muted">eaguayo@indurama.com</span><br>
+Katherine Mera — Planificación — <span class="muted">kpmera@indurama.com</span>
+`
+},
+{
+  name: ' Quevedo Administrativo',
+  body: `
+<strong>Líder Centro Servicio:</strong> Tania Arias — <span class="muted">tarias@servihogar.com.ec</span><br>
+<strong>Administrativo:</strong> Verónica Quisphe
+`
+},
+
+
+
+
+      
 //tarifarios peru
 
 {
