--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         body: 'INSTALACIÓN: Gratis.\nREQUERIMIENTOS:\n- Eléctrico: 220V, breaker 40A, conexión directa desde medidor.\n- Cable calibre 8 AWG.\n- Ventilación: 2 cm laterales, 15 cm posterior.\n- Ollas ferromagnéticas, base plana, tamaño similar al foco de inducción.\nRestricciones: No incluye albañilería ni inspecciones técnicas.' },
 
       //  AMBATO  
-      { name: 'Postventa Ambato',
+      { name: 'Técnicos Ambato',
         body:
           'CALUCHO LIZANO EDUARDO CELESTINO – 0989196335\n' +
           'CHICAIZA LLUNDO ANGEL RENAN – 0967437908\n' +
@@ -211,7 +211,7 @@
       },
 
       //   CUENCA  
-      { name: 'Postventa Cuenca',
+      { name: 'Técnicos Cuenca',
         body:
           'VILLACRES JIMENEZ PABLO PATRICIO – 0999505660\n' +
           'PAUTE PATIÑO JUAN DIEGO – 0979689712\n' +
@@ -221,7 +221,7 @@
       },
 
       //   GUAYAQUIL 
-      { name: 'Postventa Guayaquil',
+      { name: 'Técnicos Guayaquil',
         body:
           'AGUILAR HERNANDEZ ELVIS JOSHUE – 0982999980\n' +
           'BERMEJO VARGAS SEGUNDO ASENCIO – 0989132186\n' +
@@ -244,14 +244,14 @@
       },
 
       //  LOJA  
-      { name: 'Postventa Loja',
+      { name: 'Técnicos Loja',
         body:
           'MOROCHO PLACENCIA ANGEL GERARDO – 0969372182\n' +
           'MALDONADO GRANDA ROBERTO SEBASTIAN – 0939271249'
       },
 
       //   PASAJE / MACHALA  
-      { name: 'Postventa Pasaje / Machala',
+      { name: 'Técnicos Machala',
         body:
           'ZERDA ESPINOZA EDINSON STALIN – 0968655852\n' +
           'BONILLA YAGUAL IVIS PATRICIO – 0967849925\n' +
@@ -264,7 +264,7 @@
       },
 
       //   MANTA / PORTOVIEJO  
-      { name: 'Postventa Manta / Portoviejo',
+      { name: 'Técnicos Portoviejo',
         body:
           'CEDEÑO LOPEZ GARY GABRIEL – 0994952870\n' +
           'GARCIA GARCIA KEVIN – 0959741227\n' +
@@ -277,7 +277,7 @@
       },
 
       // ================= QUEVEDO =================
-      { name: 'Postventa Quevedo',
+      { name: 'Técnicos Quevedo',
         body:
           'JIMENEZ ANDRADE JUAN CARLOS – 0991710216\n' +
           'SANCHEZ MACIAS PETER JOSE – 0969524984\n' +
@@ -287,7 +287,7 @@
       },
 
       // ================= QUITO =================
-      { name: 'Postventa Quito',
+      { name: 'Técnicos Quito',
         body:
           'ESMERALDAS GOMEZ NELSON JOEL – 0980040587\n' +
           'GUAMANGALLO TERAN JUAN CARLOS – 0959604935\n' +
@@ -304,7 +304,7 @@
       },
 
       // ================= SANTO DOMINGO =================
-      { name: 'Postventa Santo Domingo',
+      { name: 'Técnicos Santo Domingo',
         body:
           'IGLESIAS PAREDES JHON JAIRO – 0992187154\n' +
           'PALADINES ZAMBRANO EDGAR DAVID – 0967186073\n' +
@@ -497,22 +497,22 @@
       {
   name: 'Centro de Servicio – Cuenca',
   body: `
-<strong>Cuenca</strong><br>
+
 Av. de las Américas y Av. Don Bosco
 `
 },
 {
   name: 'Centro de Servicio – Guayaquil',
   body: `
-<strong>Guayaquil</strong><br>
+ 
 Av. Benjamín Rosales, Urbanización Santa Leonor, Mz 5 Solar 9 (Sector Aeropuerto)<br>
 <a href="https://maps.app.goo.gl/twaR4C3pLrKxe7i28" target="_blank">📍 Ver en Google Maps</a>
 `
 },
 {
-  name: 'Centro de Servicio – Quito (La Carolina)',
+  name: 'Centro de Servicio – Quito ',
   body: `
-<strong>Quito – Sector La Carolina</strong><br>
+ 
 Av. Japón y Amazonas, Edificio MP3 (tras del CCI)<br>
 <a href="https://maps.google.com/maps?q=-0.1786738%2C-78.4846088&z=17&hl=es" target="_blank">📍 Ver en Google Maps</a>
 `
@@ -520,21 +520,21 @@ Av. Japón y Amazonas, Edificio MP3 (tras del CCI)<br>
 {
   name: 'Centro de Servicio – Machala',
   body: `
-<strong>Machala</strong><br>
+ 
 Calle Marcel Laniado y Calle Guayaquil
 `
 },
 {
   name: 'Centro de Servicio – Loja',
   body: `
-<strong>Loja</strong><br>
+ 
 Av. Pío Jaramillo 14-113 y España
 `
 },
 {
-  name: 'Centro de Servicio – Ambato',
+  name: 'Centro de Servicio',
   body: `
-<strong>Ambato</strong><br>
+ 
 Huachi Chico, Av. Julio Jaramillo N20 y Av. de los Chasquis<br>
 <span class="muted">Horario repuestos: 8:30 am – 5:00 pm (todos los días)</span>
 `
@@ -542,7 +542,7 @@ Huachi Chico, Av. Julio Jaramillo N20 y Av. de los Chasquis<br>
 {
   name: 'Centro de Servicio – Santo Domingo',
   body: `
-<strong>Santo Domingo</strong><br>
+ 
 Av. 6 de Noviembre y Agusto Agachet<br>
 Referencia: A 1 cuadra de las canchas de volley del Colegio Federico González Suárez<br>
 <a href="https://maps.app.goo.gl/XPRztW7FsPVi17948" target="_blank">📍 Ver en Google Maps</a>
@@ -551,14 +551,14 @@ Referencia: A 1 cuadra de las canchas de volley del Colegio Federico González S
 {
   name: 'Centro de Servicio – Manta',
   body: `
-<strong>Manta</strong><br>
+ 
 Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
 `
 },
 {
   name: 'Centro de Servicio – Quevedo',
   body: `
-<strong>Quevedo</strong><br>
+ 
 Km 1 1/2 vía a Valencia, frente a Jardín Tía Jessy<br>
 <span class="muted">Horario: 8:00 am – 1:00 pm / 2:30 pm – 5:00 pm (Lunes a Viernes)</span>
 `
@@ -568,7 +568,7 @@ Km 1 1/2 vía a Valencia, frente a Jardín Tía Jessy<br>
 // centros adminsitrativo
 
       {
-  name: 'Centro de Servicio – Cuenca – Administrativo',
+  name: '  Cuenca Administrativo',
   body: `
 <strong>Líder Centro Servicio:</strong> Piedad Marín<br>
 <span class="muted">pmarin@servihogar.com.ec</span>
