--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ Av. Pío Jaramillo 14-113 y España
 `
 },
 {
-  name: 'Centro de Servicio',
+  name: 'Centro de Servicio Ambato ',
   body: `
  
 Huachi Chico, Av. Julio Jaramillo N20 y Av. de los Chasquis<br>
