--- a/index.html
+++ b/index.html
@@ -726,9 +726,48 @@ Katherine Mera — Planificación — <span class="muted">kpmera@indurama.com</s
 },
 
 
+{
+  name: 'Perú — Región 2 (Nicole Del Castillo)',
+  body: `
+<strong>Responsable:</strong> NICOLE DEL CASTILLO<br>
+<strong>Correo:</strong> <a href="mailto:ncastillo@indurama.com">ncastillo@indurama.com</a><br>
+<strong>Teléfono:</strong> <a href="tel:+51994632048">994632048</a><br><br>
+<strong>Ciudades atendidas:</strong>
+<ul>
+  <li>Tumbes</li><li>Talara</li><li>Piura</li><li>Chiclayo</li><li>Cajamarca</li>
+  <li>Jaen</li><li>Chincha</li><li>Ica</li><li>Arequipa</li><li>Camana</li>
+  <li>Mollendo</li><li>Ilo</li><li>Moquegua</li><li>Tacna</li><li>Juliaca</li>
+  <li>Cusco</li><li>Abancay</li><li>Ayacucho</li>
+</ul>
+`
+},
+      //provincia
+{
+  name: 'Perú — Región 1 (Mercedes Gil)',
+  body: `
+<strong>Responsable:</strong> MERCEDES GIL<br>
+<strong>Correo:</strong> <a href="mailto:mgil@indurama.com">mgil@indurama.com</a><br>
+<strong>Teléfono:</strong> <a href="tel:+51993526671">993526671</a><br><br>
+<strong>Ciudades atendidas:</strong>
+<ul>
+  <li>Trujillo</li><li>Chimbote</li><li>Huaraz</li><li>Huacho</li><li>Cerro de Pasco</li>
+  <li>Huancayo</li><li>La Merced</li><li>Huanuco</li><li>Tingo Maria</li><li>Iquitos</li>
+  <li>Tarapoto</li><li>Pucallpa</li><li>Tocache</li><li>Pto Maldonado</li><li>Juanjui</li>
+  <li>Chachapoyas</li><li>Moyobamba</li>
+</ul>
+`
+}
 
+      //repuestosperu
 
-      
+      {
+  name: 'Perú Repuestos  ',
+  body: `
+<strong>Contacto:</strong> Repuestos Perú<br>
+<strong>WhatsApp:</strong> <a href="https://wa.me/51946091655" target="_blank">946 091 655</a><br>
+<span class="muted">Atención exclusiva por WhatsApp.</span>
+`
+},
 
 
       
