--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@ EGI-604AI, EGI-755AI, EGI-905AI<br><br>
 },
 
 {
-  name: 'Campanas – CEI-60/75/90CRP / CEI-60/75/90NE (telescópicas)',
+  name: 'Campanas – CEI-60-CRP /75-CRP/90-CRP / CEI-60-NE/75-NE/90-NE (telescópicas)',
   body: `
 <b>Precio instalación:</b> USD&nbsp;10 (inc. IVA) · Vigente desde 09-Dic-2023<br>
 <b>Instalación gratuita:</b> Sukasa, Megamaxi, Todohogar, Kiwi (y Home Vega).<br>
