--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
         <input id="q" type="text" placeholder="Buscar" autocomplete="off"/>
         <button id="clear" class="btn small ghost">Limpiar</button>
       </div>
+
+      
+<span class="pill">Todos los productos comprados en eCommerce e islas, las instalaciones son gratuitas</span>
       
     </div>
 
