--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
 
       
-<span class="pill">Todos los productos comprados en eCommerce e islas, las instalaciones son gratuitas</span>
+<span class="pill">Todos los productos comprados en eCommerce e islas, las instalaciones son gratuitas (Si es foráneo tiene costo de movilización)</span>
       
     </div>
 
