--- a/index.html
+++ b/index.html
@@ -1787,7 +1787,8 @@ Katherine Mera — Planificación — <span class="muted">kpmera@indurama.com</s
     
   </script>
  <div class="footer simple">
- &copy; 2025 — Edisson Fernando Fierro C
+ &copy; 2025 — Edisson Fernando Fierro C Versión 1.19.0
+   <p>Versión 1.0</p>
 </div>
 </body>
 </html>
