--- a/index.html
+++ b/index.html
@@ -1031,6 +1031,7 @@ Mismas condiciones que la ficha “Secadora a gas – SEC-20BLA / SEC-20DGR”.<
           'HERNANDEZ SARAGURO DANIEL MARTIN – 0989688625\n' +
           'ARIEL DAVID MURILLO GAVILANEZ – 0988847418 / 0969366212\n' +
           'JULIO MOSCOSO SANTACRUZ – 0983422976 / 0998826581'
+          'ARIEL DAVID MURILLO – 0988847418'
       },
 
       //   MANTA / PORTOVIEJO  
@@ -1081,7 +1082,7 @@ Mismas condiciones que la ficha “Secadora a gas – SEC-20BLA / SEC-20DGR”.<
           'PALOMEQUE CADENA JOSE MAURICIO – 0958789023\n' +
           'PERALTA ORTIZ JULIO CESAR – 0981272144\n' +
           'RefrigeraciónJM Jonny Dario Moreira Cedeño – 0994434002\n' +
-          'CONFORME PATIÑO ESTEBAN SALOMON – (sin número)'
+          'CONFORME PATIÑO ESTEBAN SALOMON – 0993248663'
       },
 
       // ================= ZONAS — BASTIÓN POPULAR =================
