--- a/index.html
+++ b/index.html
@@ -1021,18 +1021,19 @@ Mismas condiciones que la ficha “Secadora a gas – SEC-20BLA / SEC-20DGR”.<
       },
 
       //   PASAJE / MACHALA  
-      { name: 'Técnicos Machala',
-        body:
-          'ZERDA ESPINOZA EDINSON STALIN – 0968655852\n' +
-          'BONILLA YAGUAL IVIS PATRICIO – 0967849925\n' +
-          'CHACA LUNA VICTOR MANUEL – 0993298948\n' +
-          'ISBIS VALENCIA JORGE LUIS – 0985162799\n' +
-          'VALDEZ LOARTE BRAULIO ROBINSON – 0988887001\n' +
-          'HERNANDEZ SARAGURO DANIEL MARTIN – 0989688625\n' +
-          'ARIEL DAVID MURILLO GAVILANEZ – 0988847418 / 0969366212\n' +
-          'JULIO MOSCOSO SANTACRUZ – 0983422976 / 0998826581'
-          'ARIEL DAVID MURILLO – 0988847418'
-      },
+     { 
+  name: 'Técnicos Machala',
+  body:
+    'ZERDA ESPINOZA EDINSON STALIN – 0968655852\n' +
+    'BONILLA YAGUAL IVIS PATRICIO – 0967849925\n' +
+    'CHACA LUNA VICTOR MANUEL – 0993298948\n' +
+    'ISBIS VALENCIA JORGE LUIS – 0985162799\n' +
+    'VALDEZ LOARTE BRAULIO ROBINSON – 0988887001\n' +
+    'HERNANDEZ SARAGURO DANIEL MARTIN – 0989688625\n' +
+    'ARIEL DAVID MURILLO GAVILANEZ – 0988847418 / 0969366212\n' +
+    'JULIO MOSCOSO SANTACRUZ – 0983422976 / 0998826581\n' +
+    'ARIEL DAVID MURILLO – 0988847418'
+},
 
       //   MANTA / PORTOVIEJO  
       { name: 'Técnicos Portoviejo',
