--- a/index.html
+++ b/index.html
@@ -186,6 +186,28 @@
       { name: 'Captador – Estamos atentos', body: 'Estamos atentos a su gentil respuesta.' },
       { name: 'Captador – ¿Algo más?', body: '¿Hay algo más en lo que pueda asistirle?' },
 
+{  name: 'Plantilla Datos',
+  body: `Con gusto para agendar su orden de servicio técnico, necesitamos los siguientes datos:
+
+Nombres y apellidos: 
+Documento de identidad (Cédula, DNI, INE, etc.): 
+Teléfono de contacto: 
+Producto y modelo (Ejemplo: Refrigeradora RI-480): 
+¿Qué problema tiene tu producto? Cuéntanos qué sucede: 
+Fecha de compra (DD-MM-AA): 
+Tienda donde lo compraste: 
+
+Datos para la visita
+
+Provincia/Departamento: 
+Ciudad/Municipio: 
+Barrio/Urbanización: 
+Sector: 
+Calle principal y secundaria: 
+Número de casa: `
+},
+
+
       { name: 'Trabaja con nosotros',
         body: 'Muchas gracias por tu interés. Para hacernos llegar tu CV, por favor ingresa al siguiente link: https://www.linkedin.com/company/indurama\nTambién podrás revisar los procesos de selección que se encuentran abiertos.\nNos encantó que hayas vivido esta nueva experiencia con nosotros. Indurama agradece tu confianza.\n¡Gracias por escribirnos!' },
 
