--- a/index.html
+++ b/index.html
@@ -1686,21 +1686,22 @@ Katherine Mera — Planificación — <span class="muted">kpmera@indurama.com</s
         body: `
 <x-carousel-card aspect="16/9" autoplay interval="4000">
    <span slot="title">
-    <a href="boletin_completo.pdf" download 
+    <a href="boletin_octubre.pdf" download 
        style="color:#60a5fa; text-decoration:none; font-weight:700;">
       📄 Descargar Boletín
     </a>
   </span>
 
-  <img src="inst0.jpg" alt="Boletín 0">
-  <img src="inst1.jpg" alt="Boletín 1">
-  <img src="inst2.jpg" alt="Boletín 2">
-  <img src="inst3.jpg" alt="Boletín 3">
-  <img src="inst4.jpg" alt="Boletín 4">
-  <img src="inst5.jpg" alt="Boletín 5">
-  <img src="inst6.jpg" alt="Boletín 6">
-  <img src="inst7.jpg" alt="Boletín 7">
-  <img src="inst8.jpg" alt="Boletín 8">
+  <img src="boletin_oct_1.jpg" alt="Boletín 0">
+  <img src="boletin_oct_2.jpg" alt="Boletín 1">
+  <img src="boletin_oct_3.jpg" alt="Boletín 2">
+  <img src="boletin_oct_4.jpg" alt="Boletín 3">
+  <img src="boletin_oct_5.jpg" alt="Boletín 4">
+  <img src="boletin_oct_6.jpg" alt="Boletín 5">
+  <img src="boletin_oct_7.jpg" alt="Boletín 6">
+  <img src="boletin_oct_8.jpg" alt="Boletín 7">
+  <img src="boletin_oct_9.jpg" alt="Boletín 8">
+  
 
   <span slot="caption">Desliza para ver todos los boletines.</span>
 </x-carousel-card>`
