--- a/index.html
+++ b/index.html
@@ -225,6 +225,30 @@ Calle principal y secundaria:
 Número de casa: `
 },
 
+{  name: 'Plantilla Datos con saludo ',
+  body: `Hola, soy ___ asesor de Servicio Técnico Indurama.
+Por favor su gentil ayuda con la siguiente información para generar su orden de servicio:
+
+Nombres y apellidos: 
+Documento de identidad (Cédula, DNI, INE, etc.): 
+Teléfono de contacto: 
+Producto y modelo (Ejemplo: Refrigeradora RI-480): 
+¿Qué problema tiene tu producto? Cuéntanos qué sucede: 
+Fecha de compra (DD-MM-AA): 
+Tienda donde lo compraste: 
+
+Datos para la visita
+
+Provincia/Departamento: 
+Ciudad/Municipio: 
+Barrio/Urbanización: 
+Sector: 
+Calle principal y secundaria: 
+Número de casa: `
+},
+
+
+      
 
       { name: 'Trabaja con nosotros',
         body: 'Muchas gracias por tu interés. Para hacernos llegar tu CV, por favor ingresa al siguiente link: https://www.linkedin.com/company/indurama\nTambién podrás revisar los procesos de selección que se encuentran abiertos.\nNos encantó que hayas vivido esta nueva experiencia con nosotros. Indurama agradece tu confianza.\n¡Gracias por escribirnos!' },
