--- a/index.html
+++ b/index.html
@@ -247,7 +247,25 @@ Calle principal y secundaria:
 Número de casa: `
 },
 
+{
+    name: " Sistema Corta Gas",
+    body: `Hola, gracias por escribirnos.
+Tu cocina Indurama tiene corta gas: si la llama se apaga, el gas se corta solo. 
 
+Para encender bien:
+1. Presiona y gira la perilla.
+2. Manténla presionada 8 segundos.
+3. Suelta.
+   - Si se apaga, espera 1 minuto y repite. (La llama debe tocar el sensor metálico junto al quemador).
+
+Si tu modelo tiene temporizador, al terminar el tiempo se apaga solo.
+
+⚠️ Seguridad:
+- Si hueles gas, cierra la válvula, ventila y no enciendas interruptores.
+
+Si persiste el problema, podemos agendar una revisión. 
+¿Desea agendar una visita técnica?
+  },
       
 
       { name: 'Trabaja con nosotros',
