--- a/index.html
+++ b/index.html
@@ -247,8 +247,7 @@ Calle principal y secundaria:
 Número de casa: `
 },
 
-{
-    name: " Sistema Corta Gas",
+{name: 'Sistema Corta Gas',
     body: `Hola, gracias por escribirnos.
 Tu cocina Indurama tiene corta gas: si la llama se apaga, el gas se corta solo. 
 
